[package]
name = "org-lsp"
version = "0.1.0"
authors = ["TEC <tec@tecosaur.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emacs = "^0.14"
tokio = { version = "0.2", features = ["full"] }
tower-lsp = "^0.13"

[[bin]]
name = "orgserver"
path = "src/server/main.rs"

[lib]
name = "module"
path = "src/module/lib.rs"
crate-type = ["cdylib"]
